chore: complete system audit, QA refinement, performance optimization, and production readiness audit